K8S Advanced/10/1.4/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-istio
  namespace: istio-system
spec:
  hosts:
    - 'prometheus-istio.kubernets.cn'
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
